--- a/src/MyScene.fxml
+++ b/src/MyScene.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
@@ -13,8 +15,16 @@
    <top>
       <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="ENHANCE" />
+            <Label text="Enhance: ">
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin></Label>
             <Slider fx:id="zoomSlider" blockIncrement="1.0" max="20.0" min="1.0" value="1.0" HBox.hgrow="ALWAYS" />
+            <Button fx:id="filePicker" mnemonicParsing="false" text="Choose File">
+               <HBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </HBox.margin>
+            </Button>
          </children>
       </HBox>
    </top>
@@ -24,7 +34,7 @@
             <StackPane prefHeight="150.0" prefWidth="200.0">
                <children>
                   <ImageView fx:id="imageView" pickOnBounds="true" preserveRatio="true" />
-                  <Canvas height="200.0" width="200.0" />
+                  <Canvas fx:id="overlayCanvas" height="200.0" width="200.0" />
                </children>
             </StackPane>
          </content>
