--- a/src/MyScene.fxml
+++ b/src/MyScene.fxml
@@ -57,6 +57,7 @@
                   <Insets left="10.0" right="10.0" />
                </HBox.margin>
             </CheckBox>
+            <CheckBox fx:id="drawPolygon" mnemonicParsing="false" text="Draw Polygon" />
          </children>
          <padding>
             <Insets top="5.0" />
